--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@prisma/client": "^5.15.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "mysql2": "^3.10.1",
+    "prisma": "^5.15.1",
     "sequelize-auto-migrations": "^1.0.3",
     "sequelize-cli": "^6.6.2"
   }
